force-app/main/default/objects/Order_Account__c/Order_Account__c.object-meta.xml
<CustomObject>
    <label>After Sale</label>
    <nameField>
        <label>Order Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>