force-app/main/default/objects/Order_Account__c/fields/Bike_cc_Product__c.field-meta.xml
<CustomField>
    <fullName>Bike_cc_Product__c</fullName>
    <formula>Text(Order__r.Product__r.Bike_cc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bike cc Product</label>
    <type>Text</type>
</CustomField>