force-app/main/default/objects/Order_Account__c/fields/Created_for_PCA__c.field-meta.xml
<CustomField>
    <fullName>Created_for_PCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created for PCA</label>
    <type>Checkbox</type>
</CustomField>