force-app/main/default/objects/Order_Account__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.RecordType.Name</field>
            <operation>equals</operation>
            <value>Bike</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Account</relationshipLabel>
    <relationshipName>Order_Account</relationshipName>
    <type>Lookup</type>
</CustomField>