force-app/main/default/objects/Order_Account__c/recordTypes/After_Sale_Bike.recordType-meta.xml
<RecordType>
    <fullName>After_Sale_Bike</fullName>
    <active>true</active>
    <label>After Sale Bike</label>
</RecordType>