force-app/main/default/objects/Order_Account__c/recordTypes/After_Sales_PCA.recordType-meta.xml
<RecordType>
    <fullName>After_Sales_PCA</fullName>
    <active>true</active>
    <label>After Sales PCA</label>
</RecordType>