force-app/main/default/objects/Order_Account__c/listViews/My_After_Sale.listView-meta.xml
<ListView>
    <fullName>My_After_Sale</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My After Sale</label>
</ListView>